--- a/jeuPendu/src/application/support.fxml
+++ b/jeuPendu/src/application/support.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="258.0" layoutY="70.0" text="Rege du jeu" />
       <Label layoutX="52.0" layoutY="292.0" text="Nous contacter" />
+      <Button layoutX="520.0" layoutY="348.0" mnemonicParsing="false" onAction="#exit" text="Fermer" />
    </children>
 </Pane>
