--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -8,25 +9,31 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="bodybg3" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane styleClass="bodybg3" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="reco" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" mnemonicParsing="false" onAction="#recommencerPartie" prefHeight="60.0" prefWidth="104.0">
+      <Button fx:id="reco" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="8.0" layoutY="11.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#recommencerPartie" prefHeight="52.0" prefWidth="136.0">
          <graphic>
             <ImageView accessibleRole="BUTTON" cache="true" cacheHint="QUALITY" fitHeight="52.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/lancer.png" />
                </image>
             </ImageView>
-         </graphic></Button>
-      <Button fx:id="acceuille2" layoutY="60.0" mnemonicParsing="false" onAction="#acceuille">
+         </graphic>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding></Button>
+      <Button fx:id="acceuille2" layoutX="8.0" layoutY="75.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#acceuille" prefHeight="52.0" prefWidth="136.0">
          <graphic>
             <ImageView fitHeight="52.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/retour.png" />
                </image>
             </ImageView>
-         </graphic></Button>
-      <Button fx:id="quitter2" layoutY="118.0" minWidth="-Infinity" mnemonicParsing="false" onAction="#quitterPartie">
+         </graphic>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding></Button>
+      <Button fx:id="quitter2" layoutX="8.0" layoutY="141.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#quitterPartie" prefHeight="52.0" prefWidth="136.0">
          <graphic>
             <ImageView fitHeight="52.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -39,7 +46,7 @@
          <font>
             <Font name="Agency FB" size="34.0" />
          </font></Label>
-      <Label fx:id="L1" layoutX="304.0" layoutY="140.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
+      <Label fx:id="L1" layoutX="246.0" layoutY="200.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
          <font>
             <Font name="Agency FB Bold" size="36.0" />
          </font></Label>
