--- a/jeuPendu/src/application/support.fxml
+++ b/jeuPendu/src/application/support.fxml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="258.0" layoutY="70.0" text="Rege du jeu" />
-      <Label layoutX="52.0" layoutY="292.0" text="Nous contacter" />
-      <Button layoutX="520.0" layoutY="348.0" mnemonicParsing="false" onAction="#exit" text="Fermer" />
-   </children>
-</Pane>
+
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+    <header>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
+         <children>
+            <Label layoutX="208.0" layoutY="24.0" text="Rege du jeu" />
+            <Label layoutX="14.0" layoutY="145.0" text="Nous contacter" />
+         </children>
+      </AnchorPane>
+    </header>
+    <content>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
+         <children>
+            <Button layoutX="419.0" layoutY="11.0" mnemonicParsing="false" text="Fermer" />
+         </children>
+      </AnchorPane>
+    </content>
+    <expandableContent>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
+    </expandableContent>
+</DialogPane>
