--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -42,11 +42,11 @@
             </ImageView>
          </graphic></Button>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffa31f" height="351.0" layoutX="147.0" layoutY="37.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" width="438.0" />
-      <Label fx:id="L2" blendMode="MULTIPLY" layoutX="152.0" layoutY="50.0" prefHeight="77.0" prefWidth="432.0" textAlignment="CENTER" wrapText="true">
+      <Label fx:id="labelMessageFin" blendMode="MULTIPLY" layoutX="152.0" layoutY="50.0" prefHeight="77.0" prefWidth="432.0" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Agency FB" size="34.0" />
          </font></Label>
-      <Label fx:id="L1" layoutX="246.0" layoutY="200.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
+      <Label fx:id="labelMotMystere" layoutX="246.0" layoutY="200.0" prefHeight="45.0" prefWidth="295.0" styleClass="ouest" stylesheets="@application.css" textFill="RED">
          <font>
             <Font name="Agency FB Bold" size="36.0" />
          </font></Label>
