--- a/jeuPendu/src/application/introduction.fxml
+++ b/jeuPendu/src/application/introduction.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="bodybg1" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="700.0" maxWidth="1300.0" minHeight="700.0" minWidth="1300.0" prefHeight="700.0" prefWidth="1300.0" styleClass="bodybg1" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="lancer" layoutX="147.0" layoutY="188.0" mnemonicParsing="false" onAction="#lancerPartie" text="Lancer partie" />
-      <Button fx:id="quitter" layoutX="162.0" layoutY="295.0" mnemonicParsing="false" onAction="#quitterPartie" text="Quitter" />
-      <Button layoutX="142.0" layoutY="238.0" mnemonicParsing="false" onAction="#ouvrirSupport" text="Support / Aide" />
+      <Button fx:id="lancer" layoutX="309.0" layoutY="401.0" mnemonicParsing="false" onAction="#lancerPartie" text="Lancer partie" />
+      <Button layoutX="305.0" layoutY="470.0" mnemonicParsing="false" onAction="#ouvrirSupport" text="Support / Aide" />
+      <Button fx:id="quitter" layoutX="326.0" layoutY="517.0" mnemonicParsing="false" onAction="#quitterPartie" text="Quitter" />
    </children>
 </Pane>
