--- a/jeuPendu/src/application/support.fxml
+++ b/jeuPendu/src/application/support.fxml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
-    <header>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
-         <children>
-            <Label layoutX="208.0" layoutY="24.0" text="Rege du jeu" />
-            <Label layoutX="14.0" layoutY="145.0" text="Nous contacter" />
-         </children>
-      </AnchorPane>
-    </header>
-    <content>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
-         <children>
-            <Button layoutX="419.0" layoutY="11.0" mnemonicParsing="false" text="Fermer" />
-         </children>
-      </AnchorPane>
-    </content>
-    <expandableContent>
-      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
-    </expandableContent>
-</DialogPane>
+<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Label layoutX="82.0" layoutY="29.0" text="Règles" />
+      <Label layoutY="151.0" text="Nous contacter" />
+      <Button layoutX="146.0" layoutY="160.0" mnemonicParsing="false" text="Fermer" />
+   </children>
+</AnchorPane>
