--- a/jeuPendu/src/application/support.fxml
+++ b/jeuPendu/src/application/support.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="SupportFarWest" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="82.0" layoutY="29.0" text="Règles" />
-      <Label layoutY="151.0" text="Nous contacter" />
-      <Button layoutX="146.0" layoutY="160.0" mnemonicParsing="false" text="Fermer" />
+      <Label layoutX="272.0" layoutY="32.0" text="Règles">
+         <font>
+            <Font name="Franklin Gothic Medium" size="19.0" />
+         </font></Label>
+      <Label layoutX="21.0" layoutY="310.0" text="Nous contacter :">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <Label layoutX="75.0" layoutY="332.0" text="Numéro : +33 6 20 14 56" />
+      <Label layoutX="75.0" layoutY="350.0" text="Email : jeu@pendu.fr" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffcd" height="112.0" layoutX="21.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" width="542.0" />
+      <Label layoutX="29.0" layoutY="68.0" prefHeight="131.0" prefWidth="522.0" text="Le but du jeu est simple : deviner toute les lettres qui doivent composer un mot, éventuellement avec un nombre limité de tentatives et des thèmes fixés à l’avance. A chaque fois que le joueur devine une lettre, celle-ci est affichée. Dans le cas contraire, le dessin d’un pendu se met à apparaître…" textAlignment="JUSTIFY" textOverrun="CLIP" wrapText="true">
+         <font>
+            <Font name="Comic Sans MS" size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
