--- a/jeuPendu/src/application/fin.fxml
+++ b/jeuPendu/src/application/fin.fxml
@@ -22,7 +22,7 @@
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding></Button>
-      <Button fx:id="acceuille2" layoutX="8.0" layoutY="75.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#acceuille" prefHeight="52.0" prefWidth="136.0">
+      <Button fx:id="acceuille2" layoutX="8.0" layoutY="75.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#acceuil" prefHeight="52.0" prefWidth="136.0">
          <graphic>
             <ImageView fitHeight="52.0" fitWidth="155.0" pickOnBounds="true" preserveRatio="true">
                <image>
