--- a/jeuPendu/src/application/introduction.fxml
+++ b/jeuPendu/src/application/introduction.fxml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="700.0" maxWidth="1300.0" minHeight="700.0" minWidth="1300.0" prefHeight="700.0" prefWidth="1300.0" styleClass="bodybg1" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="lancer" layoutX="309.0" layoutY="401.0" mnemonicParsing="false" onAction="#lancerPartie" text="Lancer partie" />
-      <Button layoutX="305.0" layoutY="470.0" mnemonicParsing="false" onAction="#ouvrirSupport" text="Support / Aide" />
-      <Button fx:id="quitter" layoutX="326.0" layoutY="517.0" mnemonicParsing="false" onAction="#quitterPartie" text="Quitter" />
+      <Button layoutX="305.0" layoutY="480.0" mnemonicParsing="false" onAction="#ouvrirSupport" text="Support / Aide" />
+      <Button fx:id="quitter" layoutX="284.0" layoutY="557.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#quitterPartie" prefHeight="52.0" prefWidth="136.0">
+         <graphic>
+            <ImageView fitHeight="52.0" fitWidth="136.0" pickOnBounds="true" preserveRatio="true" />
+         </graphic></Button>
+      <Button fx:id="lancer" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="284.0" layoutY="379.0" maxHeight="52.0" maxWidth="136.0" minHeight="52.0" minWidth="136.0" mnemonicParsing="false" onAction="#lancerPartie" prefHeight="52.0" prefWidth="136.0">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </Button>
    </children>
 </Pane>
