--- a/jeuPendu/src/application/application.css
+++ b/jeuPendu/src/application/application.css
@@ -15,3 +15,8 @@
 	-fx-background-image: url("../images/SupportFarWest.png") ;
      -fx-background-size: 100% 100%;
 }
+
+.OptionFarWest{
+	-fx-background-image: url("../images/optionFarWest.png") ;
+     -fx-background-size: 100% 100%;
+}
