--- a/jeuPendu/src/application/support.fxml
+++ b/jeuPendu/src/application/support.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -11,6 +13,7 @@
          <font>
             <Font name="Franklin Gothic Medium" size="19.0" />
          </font></Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffffcd" height="73.0" layoutX="14.0" layoutY="304.0" stroke="BLACK" strokeType="INSIDE" width="216.0" />
       <Label layoutX="21.0" layoutY="310.0" text="Nous contacter :">
          <font>
             <Font size="15.0" />
@@ -23,5 +26,10 @@
             <Font name="Comic Sans MS" size="14.0" />
          </font>
       </Label>
+      <ImageView fitHeight="25.0" fitWidth="133.0" layoutX="21.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/supportFarWest_Titre.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
