--- a/jeuPendu/src/application/enJeu.fxml
+++ b/jeuPendu/src/application/enJeu.fxml
@@ -82,7 +82,7 @@
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#96662e" height="207.0" layoutX="1129.0" layoutY="181.0" stroke="BLACK" strokeType="INSIDE" width="19.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#96662e" height="16.0" layoutX="1043.0" layoutY="171.0" stroke="BLACK" strokeType="INSIDE" width="118.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffbe1f" height="63.0" layoutX="357.0" layoutY="274.0" opacity="0.54" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="339.0" />
-      <Label fx:id="mot" alignment="TOP_CENTER" ellipsisString="" layoutX="359.0" layoutY="274.0" prefHeight="63.0" prefWidth="333.0" textAlignment="CENTER" wrapText="true">
+      <Label fx:id="mot" alignment="TOP_CENTER" ellipsisString="" graphicTextGap="0.0" layoutX="359.0" layoutY="274.0" prefHeight="63.0" prefWidth="333.0" textAlignment="CENTER" wrapText="true">
          <font>
             <Font name="Agency FB Bold" size="38.0" />
          </font>
@@ -99,7 +99,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Button>
-      <Button fx:id="acceuilEnJeu" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="76.0" layoutY="17.0" maxHeight="52.0" maxWidth="136.0" minHeight="33.0" minWidth="40.0" mnemonicParsing="false" onAction="#acceuil" prefHeight="33.0" prefWidth="40.0">
+      <Button fx:id="acceuilEnJeu" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="76.0" layoutY="17.0" maxHeight="52.0" maxWidth="136.0" minHeight="33.0" minWidth="40.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="40.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
@@ -111,17 +111,42 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="quitterEnJeu" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="195.0" layoutY="16.0" maxHeight="35.0" maxWidth="40.0" minHeight="35.0" minWidth="40.0" mnemonicParsing="false" onAction="#quitterPartie" prefHeight="35.0" prefWidth="40.0">
+      <Button fx:id="quitterEnJeu" contentDisplay="GRAPHIC_ONLY" graphicTextGap="0.0" layoutX="195.0" layoutY="17.0" maxHeight="52.0" maxWidth="136.0" minHeight="33.0" minWidth="40.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="40.0">
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <graphic>
-            <ImageView accessibleRole="BUTTON" cache="true" cacheHint="QUALITY" fitHeight="37.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView accessibleRole="BUTTON" cache="true" cacheHint="QUALITY" fitHeight="32.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/quitRaccourci.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
+      <ImageView fx:id="coeur2" fitHeight="56.0" fitWidth="40.0" layoutX="974.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/coeur.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="coeur3" fitHeight="56.0" fitWidth="40.0" layoutX="1014.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/coeur.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="coeur4" fitHeight="56.0" fitWidth="40.0" layoutX="1054.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/coeur.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="coeur5" fitHeight="56.0" fitWidth="40.0" layoutX="1094.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/coeur.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="coeur1" fitHeight="56.0" fitWidth="40.0" layoutX="934.0" layoutY="380.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/coeur.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
