--- a/jeuPendu/src/application/option.fxml
+++ b/jeuPendu/src/application/option.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="524.0" prefWidth="842.0" styleClass="OptionFarWest" stylesheets="@application.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="34.0" fitWidth="251.0" layoutX="51.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
@@ -33,12 +32,12 @@
       </Label>
       <Spinner fx:id="spinneurDifficulte" layoutX="562.0" layoutY="177.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6b6b6b" height="95.0" layoutX="334.0" layoutY="317.0" stroke="#ffffff00" strokeType="INSIDE" width="166.0" />
-      <CheckBox fx:id="westernTheme" layoutX="358.0" layoutY="324.0" mnemonicParsing="false" text="Western" textFill="WHITE">
+      <CheckBox fx:id="westernTheme" layoutX="358.0" layoutY="324.0" mnemonicParsing="false" onAction="#setWesternTheme" text="Western" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
       </CheckBox>
-      <CheckBox fx:id="futuristeTheme" layoutX="358.0" layoutY="368.0" mnemonicParsing="false" text="Futuriste" textFill="WHITE">
+      <CheckBox fx:id="futuristeTheme" layoutX="358.0" layoutY="368.0" mnemonicParsing="false" onAction="#setFuturisteTheme" text="Futuriste" textFill="WHITE">
          <font>
             <Font size="20.0" />
          </font>
